postman support and driver:catalog

--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "fetch-filecache-for-crawling": "^4.0.2",
     "google-discovery-to-swagger": "git://github.com/apis-guru/google-discovery-to-swagger.git#openapi3",
     "jgexml": "^0.4.3",
+    "jmespath": "^0.15.0",
     "liquid": "^4.0.1",
     "mkdirp": "^1.0.4",
     "node-readfiles": "^0.2.0",
     "oas-resolver": "^2.4.1",
     "oas-validator": "^4.0.6",
     "parse-domain": "^3.0.2",
+    "postman2openapi": "^1.0.0-beta",
     "remove-markdown": "^0.3.0",
     "semver": "^7.3.2",
     "swagger2openapi": "^6.2.1",
