--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Mike Ralphson",
   "license": "MIT",
   "dependencies": {
+    "apib2swagger": "^1.12.0",
     "badge-maker": "^3.2.0",
     "deep-sort-object": "^1.0.2",
     "deepmerge": "^4.2.2",
