build: update deps (incl. fallback js-yaml)

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "google-discovery-to-swagger": "git://github.com/apis-guru/google-discovery-to-swagger.git#openapi3",
     "jgexml": "^0.4.4",
     "jmespath": "^0.15.0",
+    "js-yaml": "^4.0.0",
     "liquid": "^5.1.0",
     "mkdirp": "^1.0.4",
     "node-readfiles": "^0.2.0",
@@ -37,7 +38,7 @@
     "swagger2openapi": "^7.0.3",
     "tiny-opts-parser": "0.0.3",
     "urijs": "^1.19.5",
-    "yaml": "^1.10.0"
+    "yaml": "^2.0.0-1"
   },
   "devDependencies": {},
   "repository": {
