--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "swagger2openapi": "^7.0.3",
     "tiny-opts-parser": "0.0.3",
     "urijs": "^1.19.5",
-    "yaml": "^2.0.0-1"
+    "uuid": "^8.3.2",
+    "yaml": "^2.0.0-4"
   },
   "devDependencies": {},
   "repository": {
