build: switch sort dependency

--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "adm-zip": "^0.5.5",
     "apib2swagger": "^1.12.0",
     "badge-maker": "^3.3.0",
-    "deep-sort-object": "^1.0.2",
     "deepmerge": "^4.2.2",
     "fetch-filecache-for-crawling": "^4.0.2",
     "google-discovery-to-swagger": "git://github.com/apis-guru/google-discovery-to-swagger.git#openapi3",
@@ -40,6 +39,7 @@
     "puppeteer": "^10.0.0",
     "remove-markdown": "^0.3.0",
     "semver": "^7.3.2",
+    "sortobject": "^4.14.0",
     "swagger2openapi": "^7.0.7",
     "tar": "^6.1.0",
     "tiny-opts-parser": "0.0.3",
