--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "oas-validator": "^5.0.7",
     "parse-domain": "^3.0.3",
     "postman-collection-transformer": "^4.1.3",
-    "postman2openapi": "^1.0.0-beta",
+    "postman2openapi": "^1.0.0",
     "puppeteer": "^10.0.0",
     "remove-markdown": "^0.3.0",
     "semver": "^7.3.2",
@@ -49,7 +49,6 @@
     "uuid": "^8.3.2",
     "yaml": "^2.0.0-6"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Mermade/api-registry.git"
