--- a/package.json
+++ b/package.json
@@ -35,10 +35,11 @@
     "node-readfiles": "^0.2.0",
     "oas-resolver": "^2.5.5",
     "oas-validator": "^5.0.7",
+    "openai": "^3.2.1",
     "parse-domain": "^3.0.3",
     "postman-collection-transformer": "^4.1.3",
     "postman2openapi": "^1.0.0",
-    "puppeteer": "^10.0.0",
+    "puppeteer": "^19.8.0",
     "remove-markdown": "^0.3.0",
     "semver": "^7.3.2",
     "sortobject": "^4.14.0",
