--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "lint": "npx eslint *.js",
-    "test": "npm run prettier:check",
+    "test": "npm run lint && npm run prettier:check",
+    "lint": "eslint --cache --max-warnings 0 .",
     "prettier": "prettier --write --list-different .",
     "prettier:check": "prettier --check ."
   },
@@ -43,6 +43,10 @@
     "yaml": "^2.0.0-6"
   },
   "devDependencies": {
+    "@eslint/json": "^0.13.1",
+    "@eslint/markdown": "^7.1.0",
+    "eslint": "9.31.0",
+    "globals": "^16.3.0",
     "prettier": "3.6.2"
   }
 }
