--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,5 @@
 # https://help.github.com/articles/ignoring-files/#create-a-global-gitignore
 # https://www.gitignore.io/
 
+.eslintcache
 node_modules/
