--- a/package.json
+++ b/package.json
@@ -42,10 +42,11 @@
     "yaml": "^2.0.0-6"
   },
   "devDependencies": {
-    "@eslint/json": "^0.13.1",
-    "@eslint/markdown": "^7.1.0",
+    "@eslint/json": "0.13.1",
+    "@eslint/markdown": "7.1.0",
     "eslint": "9.31.0",
-    "globals": "^16.3.0",
+    "eslint-plugin-unicorn": "60.0.0",
+    "globals": "16.3.0",
     "prettier": "3.6.2"
   }
 }
